erDiagram
    %% Finance & Cancellations — generated by php artisan erd:generate

    invoices {
        bigint id PK
        bigint booking_id FK
        bigint branch_id FK
        bigint user_id FK
        decimal total_amount
        decimal paid_amount
        decimal balance
        string status
        string notes
        timestamp created_at
        timestamp updated_at
    }

    invoice_update_logs {
        bigint id PK
        bigint invoice_id FK
        bigint user_id FK
        string booking_invoice_id
        string action
        string reason
        string old_values
        string new_values
        timestamp created_at
    }

    payments {
        bigint id PK
        bigint booking_id FK
        bigint cancelled_booking_id FK
        bigint cancelled_passenger_id FK
        bigint passenger_id FK
        bigint refunded_ticket_id FK
        bigint re_issued_ticket_id FK
        bigint branch_id FK
        string payment_referral
        bigint user_id FK
        bigint currency_rate_id FK
        bigint bank_id FK
        bigint ticket_agent_id FK
        bigint visa_agent_id FK
        bigint commission_agent_id FK
        date payment_date
        string payment_method
        string transaction_id
        decimal amount
        decimal bdt_amount
        string notes
        string remarks
        timestamp created_at
        timestamp updated_at
        bigint invoice_id FK
        bigint sender_bank_id FK
        string other_sender_bank
        string receiver_bank
    }

    vouchers {
        bigint id PK
        string voucher_id UK
        bigint booking_id FK
        bigint cancelled_booking_id FK
        bigint cancelled_passenger_id FK
        bigint payment_id FK
        bigint branch_id FK
        bigint user_id FK
        bigint currency_rate_id FK
        bigint bank_id FK
        bigint ticket_agent_id FK
        bigint visa_agent_id FK
        bigint commission_agent_id FK
        bigint transaction_type_id FK
        date payment_date
        string payment_method
        string transaction_id
        decimal amount
        decimal bdt_amount
        string notes
        timestamp created_at
        timestamp updated_at
        bigint invoice_id FK
    }

    banks {
        bigint id PK
        string name
        string description
        string currency
        string location
        timestamp created_at
        timestamp updated_at
    }

    transaction_types {
        bigint id PK
        string name UK
        string type
        timestamp created_at
        timestamp updated_at
    }

    cancelled_bookings {
        bigint id PK
        bigint booking_id FK
        bigint invoice_id FK
        bigint user_id FK
        bigint confirmed_by_id FK
        bigint reverted_by_id FK
        decimal total_paid
        decimal service_charge_deduction
        decimal refund_amount
        decimal total_passenger_refundable
        string passenger_statuses_snapshot
        bigint cancellation_branch_id FK
        string status
        bigint deduction_payment_id FK
        bigint deduction_voucher_id FK
        bigint refund_payment_id FK
        bigint refund_voucher_id FK
        timestamp created_at
        timestamp updated_at
        timestamp deleted_at
    }

    cancelled_passengers {
        bigint id PK
        bigint booking_id FK
        bigint passenger_id FK
        bigint invoice_id FK
        bigint user_id FK
        decimal package_value
        decimal additional_ticket_value
        decimal total_passenger_due
        decimal visa_cost
        decimal ticket_cost
        decimal service_charge_deduction
        decimal refundable_amount
        decimal balance_adjusted_amount
        decimal refund_amount
        bigint cancellation_branch_id FK
        string status
        bigint deduction_payment_id FK
        bigint deduction_voucher_id FK
        bigint refund_payment_id FK
        bigint refund_voucher_id FK
        bigint adjustment_payment_id FK
        bigint adjustment_voucher_id FK
        bigint confirmed_by_id FK
        bigint reverted_by_id FK
        timestamp created_at
        timestamp updated_at
        timestamp deleted_at
    }

    refund_payment_requests {
        bigint id PK
        bigint passenger_id FK
        bigint booking_id FK
        bigint branch_id FK
        string status
        decimal refund_payable_snapshot
        bigint assigned_by FK
        bigint confirmed_by FK
        bigint payment_id FK
        bigint voucher_id FK
        string remarks
        timestamp assigned_at
        timestamp confirmed_at
        timestamp reverted_at
        timestamp created_at
        timestamp updated_at
    }

    booking_update_logs {
        bigint id PK
        bigint booking_id FK
        string booking_invoice_id
        bigint user_id FK
        string action
        string old_values
        string new_values
        timestamp created_at
    }

    passenger_update_logs {
        bigint id PK
        bigint passenger_id FK
        string passport_no
        bigint user_id FK
        string action
        string old_values
        string new_values
        timestamp created_at
    }

    %% Relationships
    banks ||--o{ payments : bank_id
    banks ||--o{ payments : sender_bank_id
    banks ||--o{ vouchers : bank_id
    cancelled_bookings ||--o{ payments : cancelled_booking_id
    cancelled_bookings ||--o{ vouchers : cancelled_booking_id
    cancelled_passengers ||--o{ payments : cancelled_passenger_id
    cancelled_passengers ||--o{ vouchers : cancelled_passenger_id
    invoices ||--o{ invoice_update_logs : invoice_id
    invoices ||--o{ payments : invoice_id
    invoices ||--o{ vouchers : invoice_id
    invoices ||--|{ cancelled_bookings : invoice_id
    invoices ||--|{ cancelled_passengers : invoice_id
    payments ||--o{ cancelled_bookings : deduction_payment_id
    payments ||--o{ cancelled_bookings : refund_payment_id
    payments ||--o{ cancelled_passengers : adjustment_payment_id
    payments ||--o{ cancelled_passengers : deduction_payment_id
    payments ||--o{ cancelled_passengers : refund_payment_id
    payments ||--o{ refund_payment_requests : payment_id
    payments ||--|{ vouchers : payment_id
    transaction_types ||--|{ vouchers : transaction_type_id
    vouchers ||--o{ cancelled_bookings : deduction_voucher_id
    vouchers ||--o{ cancelled_bookings : refund_voucher_id
    vouchers ||--o{ cancelled_passengers : adjustment_voucher_id
    vouchers ||--o{ cancelled_passengers : deduction_voucher_id
    vouchers ||--o{ cancelled_passengers : refund_voucher_id
    vouchers ||--o{ refund_payment_requests : voucher_id

